[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ui/HUD.gd" type="Script" id=1]

[node name="HUD" type="PanelContainer"]
anchor_right = 1.0
margin_right = -256.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 121.0
size_flags_horizontal = 3

[node name="Top" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Margins1" type="MarginContainer" parent="Panel/Top"]
margin_right = 499.0
margin_bottom = 114.0
size_flags_horizontal = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="HBox" type="HBoxContainer" parent="Panel/Top/Margins1"]
margin_left = 8.0
margin_top = 8.0
margin_right = 491.0
margin_bottom = 106.0

[node name="PlayerInfo" type="VBoxContainer" parent="Panel/Top/Margins1/HBox"]
margin_right = 400.0
margin_bottom = 98.0
size_flags_horizontal = 3

[node name="Money" type="Label" parent="Panel/Top/Margins1/HBox/PlayerInfo"]
margin_right = 400.0
margin_bottom = 14.0
text = "Player money: $0"

[node name="Score" type="Label" parent="Panel/Top/Margins1/HBox/PlayerInfo"]
margin_top = 18.0
margin_right = 400.0
margin_bottom = 32.0
text = "Player score: 0"

[node name="Buttons" type="VBoxContainer" parent="Panel/Top/Margins1/HBox"]
margin_left = 404.0
margin_right = 483.0
margin_bottom = 98.0

[node name="Reset" type="Button" parent="Panel/Top/Margins1/HBox/Buttons"]
margin_right = 79.0
margin_bottom = 20.0
text = "New game"

[node name="VSeparator" type="VSeparator" parent="Panel/Top"]
margin_left = 503.0
margin_right = 507.0
margin_bottom = 114.0

[node name="Margins2" type="MarginContainer" parent="Panel/Top"]
margin_left = 511.0
margin_right = 1010.0
margin_bottom = 114.0
size_flags_horizontal = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="AIInfo" type="VBoxContainer" parent="Panel/Top/Margins2"]
margin_left = 8.0
margin_top = 8.0
margin_right = 491.0
margin_bottom = 106.0
size_flags_horizontal = 3

[node name="Money" type="Label" parent="Panel/Top/Margins2/AIInfo"]
margin_right = 483.0
margin_bottom = 14.0
text = "AI money: $0"

[node name="Invaders" type="Label" parent="Panel/Top/Margins2/AIInfo"]
margin_top = 18.0
margin_right = 483.0
margin_bottom = 32.0
text = "Invaders: 0"

[connection signal="pressed" from="Panel/Top/Margins1/HBox/Buttons/Reset" to="." method="_on_Reset_pressed"]
